Bug 96962 - We don't have a bad enough time if an object's prototype chain crosses global objects
Summary: We don't have a bad enough time if an object's prototype chain crosses global...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on: 96596
Blocks:
  Show dependency treegraph
 
Reported: 2012-09-17 15:27 PDT by Filip Pizlo
Modified: 2012-09-17 15:48 PDT (History)
1 user (show)

See Also:


Attachments
the patch (9.31 KB, patch)
2012-09-17 15:29 PDT, Filip Pizlo
ggaren: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2012-09-17 15:27:50 PDT
Patch forthcoming.
Comment 1 Filip Pizlo 2012-09-17 15:29:42 PDT
Created attachment 164461 [details]
the patch
Comment 2 Geoffrey Garen 2012-09-17 15:34:37 PDT
Comment on attachment 164461 [details]
the patch

View in context: https://bugs.webkit.org/attachment.cgi?id=164461&action=review

r=me

> Source/JavaScriptCore/runtime/JSGlobalObject.cpp:385
>      if (!hasBrokenIndexing(object))

Push this filter higher, since it will filter often.
Comment 3 Filip Pizlo 2012-09-17 15:48:49 PDT
Landed in http://trac.webkit.org/changeset/128816