We don't have a bad enough time if an object's prototype chain crosses global objects https://bugs.webkit.org/show_bug.cgi?id=96962

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* runtime/JSGlobalObject.cpp:
(JSC):

LayoutTests:

* fast/js/cross-frame-really-bad-time-expected.txt: Added.
* fast/js/cross-frame-really-bad-time-with-__proto__-expected.txt: Added.
* fast/js/cross-frame-really-bad-time-with-__proto__.html: Added.
* fast/js/cross-frame-really-bad-time.html: Added.
* fast/js/script-tests/cross-frame-really-bad-time-with-__proto__.js: Added.
(foo):
(evil):
(bar):
(done):
* fast/js/script-tests/cross-frame-really-bad-time.js: Added.
(Cons):
(foo):
(evil):
(bar):
(done):



Canonical link: https://commits.webkit.org/114883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128816 268f45cc-cd09-0410-ab3c-d52691b4dbfc